SERVER-5198 Don't check for dups in the remove implementation.